samples/_failures_safe/1761201435_6094fc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_52fb8e11.c: In function ‘tokenize’:
./samples/SAFE/__tmp_52fb8e11.c:158:9: error: expected expression at end of input
  158 |         tokens[token_count].value[
      |         ^~~~~~
./samples/SAFE/__tmp_52fb8e11.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_52fb8e11.c:158:9: error: expected declaration or statement at end of input
